[gd_scene load_steps=14 format=2]

[ext_resource path="res://Epouv.gd" type="Script" id=1]
[ext_resource path="res://Common/STENCIL.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Textures/Characters/Zone_1/Epouv_body.png" type="Texture" id=3]
[ext_resource path="res://Textures/Characters/Zone_1/Epouv_b1.png" type="Texture" id=4]
[ext_resource path="res://Textures/Characters/Zone_1/Epouv_a1.png" type="Texture" id=5]
[ext_resource path="res://Textures/Characters/Zone_1/Epouv_b2.png" type="Texture" id=6]
[ext_resource path="res://Textures/Characters/Zone_1/Epouv_a2.png" type="Texture" id=7]
[ext_resource path="res://Textures/Characters/Zone_1/Epouv_eyes.png" type="Texture" id=8]
[ext_resource path="res://Sounds/Zone_1/Epouv_spawn.wav" type="AudioStream" id=9]
[ext_resource path="res://Sounds/Zone_1/Epouv_hit.wav" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Arm_2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -52.3847, -108.188 ), Vector2( -52.3847, -108.188 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Arm_2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -56.5177 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Arm_1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 52.4445, -108.728 ), Vector2( 52.4445, -108.728 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/Arm_1:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 50.9106 ]
}

[sub_resource type="Animation" id=3]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Arm_1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 52.4445, -108.728 ), Vector2( 52.4445, -108.728 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Arm_1:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 50.9106, -43.9883 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Arm_2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -52.3847, -108.188 ), Vector2( -52.3847, -108.188 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/Arm_2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -56.5177, 35.9468 ]
}

[node name="Epouv" type="KinematicBody2D" groups=[
"Ennemies",
]]
position = Vector2( 18198.8, 688.057 )
collision_layer = 2
collision_mask = 4
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -44.4414
margin_top = -311.244
margin_right = 42.5586
margin_bottom = -260.244
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "999"
align = 1
valign = 1

[node name="Body" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 0.00195313, 1.58667 )
texture = ExtResource( 3 )

[node name="Arm_1" type="Sprite" parent="Body"]
position = Vector2( 52.4445, -108.728 )
texture = ExtResource( 4 )
offset = Vector2( 82.2637, 6.32672 )

[node name="Cout" type="Sprite" parent="Body/Arm_1"]
visible = false
position = Vector2( 141.922, -46.3476 )
texture = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="Body/Arm_1/Cout"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Body/Arm_1/Cout/Area2D"]
polygon = PoolVector2Array( -0.216797, -64.2849, -18.6152, 62.8242, 2.70898, 66.1692, 20.6895, -31.6714 )

[node name="Arm_2" type="Sprite" parent="Body"]
position = Vector2( -52.3847, -108.188 )
texture = ExtResource( 6 )
offset = Vector2( -78.998, 6.10901 )

[node name="Cout2" type="Sprite" parent="Body/Arm_2"]
visible = false
position = Vector2( -138.143, -46.9567 )
texture = ExtResource( 7 )

[node name="Area2D" type="Area2D" parent="Body/Arm_2/Cout2"]
position = Vector2( -1.44922, 3.85028 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Body/Arm_2/Cout2/Area2D"]
polygon = PoolVector2Array( -0.216797, -64.2849, 23.3184, 62.4828, -1.70898, 64.1892, -21.0488, -35.92 )

[node name="Eyes" type="Sprite" parent="Body"]
visible = false
position = Vector2( -0.03125, -163.321 )
texture = ExtResource( 8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -55.2324, 228.54, -45.1738, 9.55927, -57.5547, -84.8424, -183.682, -18.297, -212.311, -121.984, -51.3633, -120.436, -52.9121, -241.147, 50.7754, -241.147, 51.5488, -121.21, 212.496, -120.436, 179.998, -25.261, 56.1914, -84.8424, 45.3594, 11.8806, 56.9668, 229.314 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Spawn = SubResource( 2 )
anims/atk = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Spawn" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
bus = "Mobs"

[node name="hit_enn" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
bus = "Mobs"
[connection signal="body_entered" from="Body/Arm_1/Cout/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Body/Arm_2/Cout2/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
